Fixed spacing issues in title.

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -28,7 +28,7 @@
   gap: 1rem;
   justify-content: center;
   align-items: center;
-  padding: 2rem;
+  padding: 1.4rem;
 }
 
 .herolinks a:hover {
